--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     eat world
-    <img src=”https://qiqi02.github.io/yiyiyi/IMG_3082.HEIC”>
+    <img src=”https://qiqi02.github.io/yiyiyi/images/IMG_3082.HEIC”>
      <table>  
        <tr>     
          <th>      
